# quickbg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
skill/quickbg/: SKILL.md
skill/quickbg/evals/: evals.json
src/quickbg/: __init__.py  __main__.py  cli.py
tests/: test_quickbg.py
